# fast-matrix-multiplication

./: .gitignore  CMakeLists.txt  README.md
include/: functions.h  matmul_ks.h  matmul_sparse.h  matmul_standard.h  matmul_strassen.h  matrix.h  mult_functions.h
src/: functions.cpp  main.cpp  matmul_ks.cpp  matmul_sparse.cpp  matmul_standard.cpp  matmul_strassen.cpp  matrix.cpp  mult_functions.cpp  plot.py
